# rust-strategy-backtester

./: .gitignore  Cargo.toml  README.md
examples/: simple_backtest.rs
src/: lib.rs
