[package]
name = "rust-strategy-backtester"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "High-performance backtesting framework for trading strategies"
license = "MIT"
repository = "https://github.com/gabriellafis/rust-strategy-backtester"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.11"

[profile.release]
opt-level = 3
lto = true
